--- a/bin/main/application.properties
+++ b/bin/main/application.properties
@@ -1,18 +1,18 @@
-# Indica a porta que o tomcat irï¿½ rodar
+# Indica a porta que o tomcat irá rodar
 server.port=8080
 
 # Indica o contexto do projeto
 server.servlet.context-path=/fiap
 
-# Indica onde estarï¿½o a camada de VIEW do MVC e qual sufixo, habilita o hiddenMethodfilter
+# Indica onde estarão a camada de VIEW do MVC e qual sufixo, habilita o hiddenMethodfilter
 spring.mvc.view.prefix=/WEB-INF/jsp/
 spring.mvc.view.suffix=.jsp
 spring.mvc.hiddenmethod.filter.enabled=true
 
-# Configuraï¿½ï¿½es bï¿½sicas para conexï¿½o com o banco
+# Configurações básicas para conexão com o banco
 spring.datasource.url=jdbc:oracle:thin:@oracle.fiap.com.br:1521:ORCL
-spring.datasource.username=fiap
-spring.datasource.password=fiap
+spring.datasource.username=RM80106
+spring.datasource.password=130500
 spring.datasource.driver-class-name=oracle.jdbc.driver.OracleDriver
 
 # Dialeto utilizado para trabalhar no banco, cada banco possui um dialeto
@@ -24,12 +24,12 @@ spring.jpa.show-sql=true
 # Formata o sql exibido
 spring.jpa.properties.hibernate.format_sql=true
 
-# Informa aï¿½ï¿½o inicial do Hibernate - create, update, create-drop, validate, none
+# Informa ação inicial do Hibernate - create, update, create-drop, validate, none
 spring.jpa.hibernate.ddl-auto=create
 
-# Executa um SQL apï¿½s inicializaï¿½ï¿½o do hibernate, funciona apenas com create
+# Executa um SQL após inicialização do hibernate, funciona apenas com create
 spring.jpa.properties.hibernate.hbm2ddl.import_files=sql/populate-database.sql
 
-# Nï¿½vel de informaï¿½ï¿½o do log
+# Nível de informação do log
 logging.level.org.hibernate.SQL=INFO
 logging.level.org.hibernate.type=INFO
