--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,8 +11,8 @@ spring.mvc.hiddenmethod.filter.enabled=true
 
 # Configurações básicas para conexão com o banco
 spring.datasource.url=jdbc:oracle:thin:@oracle.fiap.com.br:1521:ORCL
-spring.datasource.username=SEU_USUARIO
-spring.datasource.password=SUA_SENHA
+spring.datasource.username=RM80106
+spring.datasource.password=130500
 spring.datasource.driver-class-name=oracle.jdbc.driver.OracleDriver
 
 # Dialeto utilizado para trabalhar no banco, cada banco possui um dialeto
