--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -33,3 +33,8 @@ spring.jpa.properties.hibernate.hbm2ddl.import_files=sql/populate-database.sql
 # Nível de informação do log
 logging.level.org.hibernate.SQL=INFO
 logging.level.org.hibernate.type=INFO
+
+# Tratamento de erro
+server.error.whitelabel.enabled=false
+spring.mvc.throw-exception-if-no-handler-found=true
+spring.resources.add-mappings=false
