--- a/build.gradle
+++ b/build.gradle
@@ -19,6 +19,8 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	
+	implementation 'io.springfox:springfox-boot-starter:3.0.0'
+	
 	runtimeOnly 'com.oracle.ojdbc:ojdbc8'
 	
 	providedRuntime 'org.springframework.boot:spring-boot-starter-tomcat'
